--- a/bitnami.css
+++ b/bitnami.css
@@ -1,9 +1,9 @@
 body{
   margin-top: 20px;
-  background-color: lightgray; 
+  background-color: lightgray;
 }
 .main{
-  padding: 15px; 
+  padding: 15px;
   font-family: Arial, Helvetica, sans-serif;
 }
 .topbar{
@@ -11,7 +11,7 @@ body{
   overflow: hidden;
 }
 .topbar a{
-  float:right; 
+  float:right;
   color: whitesmoke;
   text-align: center;
   padding: 20px 26px;
@@ -24,8 +24,8 @@ body{
   height: 100%;
 }
 .sidebar a{
-  margin-left: 10px; 
-  display: block; 
+  margin-left: 10px;
+  display: block;
   color: white;
   padding-bottom: 10px;
   font-size: 30px;
@@ -33,9 +33,58 @@ body{
 }
 .card{
     position: relative;
-    display: flex; 
+    display: flex;
     flex-direction: column;
   }
   .content{
-    background-color: whitesmoke; 
+    background-color: whitesmoke;
+  }
+  .loginPage{
+      width: 382px;
+      overflow: hidden;
+      margin: auto;
+      margin: 20 20 20 450px;
+      padding: 80px;
+      background-color: teal;
+      border-radius: 15px ;
+      text-align: center;
+
+  }
+  .login
+  {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, Helvetica, sans-serif;
+  }
+
+#uname{
+      width: 300px;
+      height: 30px;
+      border: none;
+      border-radius: 3px;
+      padding-top: 5px;
+      margin-top: 5px;
+      padding-bottom: 2px;
+      margin-bottom: 2px;
+  }
+  #psw{
+      width: 300px;
+      height: 30px;
+      border: none;
+      border-radius: 3px;
+      padding-top: 5px;
+      margin-top: 5px;
+      padding-bottom: 2px;
+      margin-bottom: 2px;
+
+  }
+  #log, #logMan{
+      width: 300px;
+      height: 30px;
+      border: none;
+      border-radius: 17px;
+      padding-top: 10px;
+      margin-top: 10px;
+      color: blue;
+      text-align: center;
   }
