--- a/shift.css
+++ b/shift.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
   margin: 0;
   padding: 0;
@@ -25,17 +24,9 @@ body{
   font-size: 25px;
   font-weight: 500;
   position: relative;
+  text-align: center;
 }
-.container .title::before{
-  content: "";
-  position: absolute;
-  left:0; 
-  bottom: 0;
-  height: 3px;
-  width: 30px;
-  border-radius: 5px;
-  background: #71b7e9;
-}
+
 .content form .user-details{
   display: flex;
   flex-wrap: wrap;
@@ -66,39 +57,14 @@ form .input-box span.details{
 .user-details .input-box input:valid{
   border-color: #9b59b6;
 }
- form .gender-details .gender-title{
-  font-size: 20px;
-  font-weight: 500;
- }
+ 
  form .category{
    display: flex;
    width: 80%;
    margin: 14px 0 ;
    justify-content: space-between;
  }
- form .category label{
-   display: flex;
-   align-items: center;
-   cursor: pointer;
- }
- form .category label .dot{
-  height: 18px;
-  width: 18px;
-  border-radius: 50%;
-  margin-right: 10px;
-  background: #d9d9d9;
-  border: 5px solid transparent;
-  transition: all 0.3s ease;
-}
- #dot-1:checked ~ .category label .one,
- #dot-2:checked ~ .category label .two,
- #dot-3:checked ~ .category label .three{
-   background: #9b59b6;
-   border-color: #d9d9d9;
- }
- form input[type="radio"]{
-   display: none;
- }
+ 
  form .button{
    height: 45px;
    margin: 35px 0
@@ -118,12 +84,9 @@ form .input-box span.details{
  }
  form .button input:hover{
   /* transform: scale(0.99); */
-  background:  #9b59b6;
+  background: #9b59b6;
   }
- @media(max-width: 584px){
- .container{
-  max-width: 100%;
-}
+
 form .user-details .input-box{
     margin-bottom: 15px;
     width: 100%;
@@ -138,9 +101,4 @@ form .user-details .input-box{
   .user-details::-webkit-scrollbar{
     width: 5px;
   }
-  }
-  @media(max-width: 459px){
-  .container .content .category{
-    flex-direction: column;
-  }
-}
+  
