--- a/shift.css
+++ b/shift.css
@@ -101,4 +101,20 @@ form .user-details .input-box{
   .user-details::-webkit-scrollbar{
     width: 5px;
   }
+   .notifications{
+    position: absolute; 
+    width: 500px;
+    height: 20px;
+    right: 100px;
+    top: 10px; 
+    font-size: 18px;
+    cursor: pointer;
+    padding: 6px; 
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  .notif-button{
+  cursor: pointer;
+  }
   
